--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -93,6 +93,20 @@
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            "label": "test",
+            "command": "make",
+            "args": [
+                "test"
+            ],
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            }
         }
     ]
 }
