--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -97,6 +97,34 @@
             }
         },
         {
+            "label": "release",
+            "command": "make",
+            "args": [
+                "release"
+            ],
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
+            "label": "release-dump",
+            "command": "make",
+            "args": [
+                "release-dump"
+            ],
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
             "label": "dump",
             "command": "make",
             "args": [
